[package]
name = "xml2abx"
version = "0.1.2"
edition = "2024"
authors = ["rhythmcache"]
description = "Rust Library To Convert Human Readable XML into Android Binary Xml (ABX)"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rhythmcache/xml2abx-rs"
keywords = ["xml", "android", "xml2abx", "converter", "abx"]
categories = ["parsing", "command-line-utilities"]

[[bin]]
name = "xml2abx"
path = "src/main.rs"

[lib]
name = "xml2abx"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
byteorder = "1.5"
quick-xml = { version = "0.38.3", features = ["encoding", "escape-html", "overlapped-lists"] }

[profile.release]
opt-level = "z" 
lto = true     
codegen-units = 1 
strip = true  
panic = "abort"
incremental = false
